--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tabs"
-        android:background="@color/grocery_shop_app_color"
+        android:background="@color/blue_tint"
         android:minHeight="?attr/actionBarSize"
         app:tabMode="fixed"
         app:tabGravity="fill"
