--- a/app/src/main/res/layout/admin_sign_fragment.xml
+++ b/app/src/main/res/layout/admin_sign_fragment.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-
+    android:layout_marginTop="60dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginBottom="40dp"
     >
     <include
         layout="@layout/toolbar_layout"
@@ -18,6 +21,8 @@
         android:layout_marginTop="12dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:background="@color/sellquick_grey"
+
         >
 
         <EditText
