--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/grocery_shop_app_color"
+    android:gravity="center"
+    android:background="@color/blue_tint"
   android:id="@+id/toolbar"
     android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
