--- a/app/src/main/res/layout/activity_customer_register.xml
+++ b/app/src/main/res/layout/activity_customer_register.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
+    android:layout_marginTop="60dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginBottom="40dp"
     tools:context=".customerscontent.CustomerRegisterActivity">
     <include
         layout="@layout/toolbar_layout"/>
@@ -24,7 +28,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="204dp"
             android:ems="10"
-            android:hint="Customer Email Id"
+            android:hint="Create Customer Email Id"
             android:inputType="textEmailAddress|textPersonName" />
     </android.support.design.widget.TextInputLayout>
 
