--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -20,7 +20,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="89dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/profile"
+        android:src="@drawable/profile_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.485"
