--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
+
     tools:context=".newownercontent.PasswordActivity">
     <include
         layout="@layout/toolbar_layout"/>
@@ -25,7 +26,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="204dp"
             android:ems="10"
-            android:hint="Enter Password"
+            android:hint="Set Your Password"
             android:inputType="textPersonName" />
 
     </android.support.design.widget.TextInputLayout>
