--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
+    android:layout_marginTop="60dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginBottom="40dp"
     tools:context=".newownercontent.RegisterActivity">
     <include
         layout="@layout/toolbar_layout"/>
@@ -25,7 +29,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="204dp"
             android:ems="10"
-            android:hint="Market Owner EmailId"
+            android:hint="Create Shop Owner EmailId"
             android:inputType="textEmailAddress|textPersonName" />
     </android.support.design.widget.TextInputLayout>
 
@@ -45,7 +49,7 @@
             android:layout_marginTop="204dp"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="MarketName"
+            android:hint="ShopName"
             android:inputType="textPersonName" />
     </android.support.design.widget.TextInputLayout>
 
